# dechromium

./: CHANGELOG.md  pyproject.toml
docs/guide/: browser-management.md  network.md
docs/patches/: overview.md
docs/reference/: models.md
patches/145.0.7632.116/: 001-aspect-infrastructure.patch  002-navigator-spoofing.patch  003-screen-display.patch  004-client-hints.patch  005-canvas-fingerprint.patch  006-webgl-fingerprint.patch  007-audio-fingerprint.patch  008-domrect-noise.patch  009-network-privacy.patch  010-font-control.patch  011-geolocation-spoofing.patch  012-font-allowlist.patch  013-timezone-spoofing.patch  014-speech-synthesis.patch
src/dechromium/: __init__.py  _cli.py  _client.py  _geoip.py
src/dechromium/browser/: _process.py
src/dechromium/data/: country_locales.json  gpu_profiles.json
src/dechromium/models/: _network.py  _profile.py  _webgl.py
src/dechromium/profile/: _launcher.py  _manager.py
src/dechromium/server/: _routes.py  _schemas.py
tests/: test_imports.py
