[project]
name = "dechromium"
version = "0.9.2"
description = "Anti-detect browser built on Chromium"
authors = [{ name = "ENbanned" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["browser", "chromium", "anti-detect", "fingerprint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = ["pydantic>=2.0", "maxminddb>=2.0"]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.20"]

[project.urls]
Homepage = "https://github.com/ENbanned/dechromium"
Documentation = "https://enbanned.github.io/dechromium/"
Repository = "https://github.com/ENbanned/dechromium"
Issues = "https://github.com/ENbanned/dechromium/issues"
Changelog = "https://github.com/ENbanned/dechromium/blob/main/CHANGELOG.md"

[project.scripts]
dechromium = "dechromium._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dechromium"]

[tool.ruff]
line-length = 99
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8", "pre-commit>=4.0", "mkdocs-material>=9.0"]
